# django-queued-storage

./: pyproject.toml  setup.cfg  tox.ini
.run/: pytest.run.xml
queued_storage/: backends.py  conf.py  signals.py  tasks.py
tests/: __init__.py  backends.py  celery.py  celeryconfig.py  models.py  settings.py  tasks.py  test_config_errors.py  test_storages.py  test_storages_new.py
